<resources>
    <string name="app_name">MobileDev</string>
    <string name="logo">Logo</string>
    <string name="flower_shop">Flower Shop</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="cancel">Cancel</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="invalid_field">Invalid field/s.</string>
    <string name="incorrect_credentials">Incorrect credentials.</string>
    <string name="check_out">Check Out (%1$d items)</string>
    <string name="view_details">View Details</string>
    <string name="back">Back</string>
    <string name="product_image">Product Image</string>
    <string name="quantity">Quantity:</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="confirm">Confirm</string>
    <string name="details">Details:</string>
    <string name="price">Price: $ %1$d.00</string>
    <string name="review_order">Review Order</string>
    <string name="check_out_plain">Check Out</string>
    <string name="total_price">Total: $ %1$d.00</string>
    <string name="thanks">Thank you for shopping!</string>
    <string name="back_to_shopping">Back to Shopping</string>
</resources>